parser/src/test/resources/corpus/valid/41_nav_at_boundary.ff
rule "NAV at Boundary" {
  let opening = nav at start of period
  let closing = nav at end of period
  let delta = nav at end of period - nav at start of period
}
