parser/src/test/resources/corpus/invalid/46_at_boundary_no_period.ff
rule "At Boundary No Period" {
  let x = nav at end of
}
